# IO_Simulator

./: .gitmodules  CMakeLists.txt  README.md
bigfile/: CMakeLists.txt
bigflie.old/: bigfile-mpi.c
output/TestFile-4050-16-81000/: stdout_file
output/TestFile-4050-4-81000/: stdout_file
output/TestFile-4050-64-81000/: stdout_file
output/TestFile-4050-64-81000/TestBlock/: header
output/TestFile-81-16-1620/: stdout_file
output/TestFile-81-16-81000/: stdout_file
output/TestFile-81-4-1620/: stdout_file
output/TestFile-81-4-81000/: stdout_file
output/TestFile-81-64-1620/: stdout_file
output/TestFile-81-64-1620/TestBlock/: header
output/TestFile-81-64-81000/: stdout_file  stdout_file02
output/TestFile-81-64-81000/TestBlock/: header
src/: CMakeLists.txt  Makefile  iosim.c  iosim.sh  sim.sh
src/TestFile/TestBlock/: 000000  header
